--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 class="text-white font-lg wow fadeInUp " data-wow-duration="2s">All DeFi & <br>NFT Earnings</h1>
+														<h1 class="text-white font-lg wow fadeInUp backInUp" data-wow-duration="2s">All DeFi & <br>NFT Earnings</h1>
 													
 														<h2 class="text-white font-lg2 yellow_padding wow fadeInUp" style="padding-left: 50px;" data-wow-duration="2s">Uni<span>fied</span> in One
 															<span>Coin</span></h2>
@@ -280,11 +280,11 @@
 
 			<div class="dog-section">
 
-				<div id="swap" class="dog-section-single">
+				<div id="swap" class="dog-section-single leftonee">
 					<div class="row justify-content-center">
 						<div class="col-md-5 my-auto">
 
-							<div class="dog-section-right">
+							<div class="  dog-section-right">
 								<div class="dog-section-content">
 									<div class="section-subtitle wow fadeInUp">Fetch!</div>
 									<div class="section-title wow fadeInUp">One Click Easy</div>
@@ -294,6 +294,7 @@
 									</a> -->
 								</div>
 							</div>
+
 						</div>
 						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
 							<div class="dog-section-left">
@@ -306,7 +307,7 @@
 				</div>
 
 				
-				<div id="swap" class="dog-section-single">
+				<div id="swap" class="dog-section-single rightonee">
 					<div class="row justify-content-center">
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
@@ -335,7 +336,7 @@
 					</div>
 				</div>
 
-				<div class="dog-section-single">
+				<div class="dog-section-single leftonee">
 					<div class="row justify-content-center flex-md-row flex-column-reverse">
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
@@ -366,7 +367,7 @@
 
 					</div>
 				</div>
-				<div class="dog-section-single">
+				<div class="dog-section-single rightonee">
 					<div class="row justify-content-center">
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
@@ -393,7 +394,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="dog-section-single"> 
+				<div class="dog-section-single leftonee"> 
 					<div class="row justify-content-center flex-md-row flex-column-reverse"> 
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left ">
