--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
 	<script src="js/mobile-detect.min.js" type="text/javascript"></script>
 	<script src="js/scripts.js" type="text/javascript"></script>
+	<script src="js/mixpanel-config.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="css/wow.css">
 	<script type="text/javascript" src="js/wow.js"></script>
 
