--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="js/mobile-detect.min.js" type="text/javascript"></script>
 	<script src="js/scripts.js" type="text/javascript"></script>
 	<script src="js/mixpanel-config.js" type="text/javascript"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKCWRHS6D2"></script>
 	<link rel="stylesheet" href="css/wow.css">
 	<script type="text/javascript" src="js/wow.js"></script>
 
@@ -49,6 +50,18 @@
 				offset: '-100px'
 			});
 		});
+	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-XKCWRHS6D2');
+
+		gtag('event', 'screen_view', {});
+
+		document.write(JSON.stringify(dataLayer));
+
 	</script>
 	<style>
 		.modal-p {
