--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 		gtag('config', 'G-XKCWRHS6D2');
 
-		gtag('event', 'screen_view', {});
+		gtag('event', 'pageload', {
+		});
 
 	</script>
 	<style>
