--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
 						<div class="banner-text-wrap">
 							<div class="container d-block">
 								<div class="row vh-100 row-eq-height animate">
-									<div class="col-md-7 align-self-center">
+									<div class="col-md-7 align-self-md-center align-self-end">
 										<img class="animate-left" src="images/img-1.png" alt="" />
 									</div>
-									<div class="col-md-5 align-self-center">
+									<div class="col-md-5 align-self-md-center ">
 										<div class="banner-text-center">
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
@@ -214,8 +214,8 @@
 														<h1 class="text-white font-lg wow fadeInUp backInUp"
 															data-wow-duration="2s">All DeFi & <br>NFT Earnings</h1>
 
-														<h2 class="text-white font-lg2 yellow_padding wow fadeInUp"
-															style="padding-left: 50px;" data-wow-duration="2s">
+														<h2 class="text-white font-lg2  wow fadeInUp"
+															data-wow-duration="2s">
 															Uni<span>fied</span> in One
 															<span>Coin</span>
 														</h2>
