text fade issue fixed

--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
 
 														<h2 class="text-white font-lg2  wow fadeInUp"
 															data-wow-duration="2s">
-															Uni<span>fied</span> in One
-															<span>Coin</span>
+															Uni<span class="Textfadehome">fied</span> in One
+															<span class="Textfadehome">Coin</span>
 														</h2>
 														<h2 class="text-white font-lg2 wow fadeInUp">
-															Simpli<span >fied</span> in One <span >Click</span></h2>
+															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
 
 													</div>
 														<div class="newclasclock-builder-output">
