--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<script src="js/scripts.js" type="text/javascript"></script>
 	<script src="js/mixpanel-config.js" type="text/javascript"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKCWRHS6D2"></script>
+	<script src="js/google-analytics-config.js"></script>
 	<link rel="stylesheet" href="css/wow.css">
 	<script type="text/javascript" src="js/wow.js"></script>
 
@@ -50,18 +51,6 @@
 				offset: '-100px'
 			});
 		});
-	</script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'G-XKCWRHS6D2');
-
-		gtag('event', 'pageload', {
-			'source':'auto'
-		});
-
 	</script>
 	<style>
 
