--- a/index.html
+++ b/index.html
@@ -740,9 +740,10 @@
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>Liquidity Generation Event (LGE)</span></h1>
-								<p>25% of the 100M supple, or 25M tokens, will be sold, at maximum. <br> <br> Unsold
-									will be burned.</p>
+								<p>25% of the 100M supple, or 25M tokens, will be sold, at maximum. <br>
 								<p>25% goes to Liquidity Mining (LM) for the first 30 days</p>
+								<p> Unsold tokens will be burned.</p>
+								<p> Limited Supply. Only 1k BNB (~5 BTC worth) is available at the lowest price</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
