--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<div class="container d-block">
 								<div class="row vh-100 row-eq-height animate">
 									<div class="col-md-7 align-self-md-center align-self-end">
-										<img class="animate-left" src="images/img-1.png" alt="" />
+										<img class="animate-left" src="images/newimg.png" alt="" />
 									</div>
 									<div class="col-md-5 align-self-md-center ">
 										<div class="banner-text-center">
