fadeup issue fixed

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 									<li><a class="n-link-6" href="javascript:void(0)" value="One">One</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
-									<li><a class="n-link-9 special_nav" href="javascript:void(0)"
+									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)"
 											value="Token">Token</a></li>
-									<li><a class="n-link-10 special_nav" href="javascript:void(0)" value="LM">LM</a>
+									<li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LM">LM</a>
 									</li>
-									<li><a class="n-link-11 special_nav" href="javascript:void(0)" value="LGE">LGE</a>
+									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LGE">LGE</a>
 									</li>
 
 									<!-- <li><a class=" get-modified" href="javascript:void(0)"  data-toggle="modal" data-target="#exampleModal" download value="Navigation Bar Get Notified">Get Notified!</a> </li> -->
