--- a/index.html
+++ b/index.html
@@ -380,10 +380,12 @@
 							<div class="  dog-section-right">
 								<div class="dog-section-content">
 									<div class="section-subtitle wow fadeInUp">Fetch!</div>
-									<a class="button stackbtn fetchbuttonadd" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" value="Innovation Stack Get Notified" download>Get
-										Notified!</a>
-									<div class="section-title wow fadeInUp">One Click Easy</div>
+									<div class="banner-header-button wow fadeInUp">
+										<a class="button" href="javascript:void(0)" data-toggle="modal"
+											data-target="#exampleModal" download value="RoverHouse Get Notified">Get
+											Notified!</a>
+									</div>
+										<div class="section-title wow fadeInUp">One Click Easy</div>
 									<p class="wow fadeInUp">Send BNB. RoverFetch does the rest<br><br>Fetches you Rover
 										tokens at the best price by splitting the buy from our own RoverSwap and our
 										LGE, to reduce slippage while automatically pooling, staking, and compounding
