--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 										<img src="images/logo1.png" alt="logo_Uni.svg">
 									</div>
 									<div class="partner_image wow fadeInLeft ">
-										<img src="images/EthBnb.png" alt="logo_Uni.svg">
+										<img src="images/BNB.png" alt="logo_Uni.svg">
 									</div>
 								</div>
 							</div>
