video, but plays just 2s

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<div class="container d-block">
 								<div class="row vh-100  row-eq-height animate">
 									<div class="col-md-7 align-self-md-center align-self-end">
-										<img class="animate-left" src="images/newimg.png" alt="" />
+										<img class="fadeInUp" src="images/newimg.png" alt="" />
 									</div>
 									<div class="col-md-5 align-self-md-center ">
 										<div class="banner-text-center">
@@ -294,10 +294,9 @@
 							<div class="content-center  video-center">
 								<div class="content-center-blk">
 									<div class="video-blk">
-										<div class="video-wrapper wow fadeInUp">
+										<div class="video-wrapper">
 											<video id="video" class="videoPlayer" controls controlsList="nodownload"
-												autoplay loop poster="images/RyuStill.jpg">
-												<source src="images/rover-video.mp4" type="video/mp4">
+												<source src="../res/RoverFinal_720.mp4" type="video/mp4">
 											</video>
 										</div>
 									</div>
