--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 										<div class="video-wrapper">
 											<video id="video" class="videoPlayer" controls controlsList="nodownload"
 												autoplay loop poster="images/RyuStill.jpg">
-												<source src="../res/RoverFinal_720.mp4" type="video/mp4">
+												<source src="res/RoverFinal_720.mp4" type="video/mp4">
 											</video>
 										</div>
 									</div>
@@ -415,7 +415,7 @@
 								<div class="row">
 									<div class="col-lg-4">
 										<div class="dog-section-image wow fadeInLeft">
-											<img src="images/img-2.png" />
+											<img src="images/StickPadWhite.png" />
 										</div>
 									</div>
 
@@ -818,7 +818,7 @@
 	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content" style="background-image: url('images/huge.jpg'); background-repeat: no-repeat;
+			<div class="modal-content" style="background-image: url('images/hexagon.jpg'); background-repeat: no-repeat;
     background-size: cover;">
 				<div class="modal-header">
 					<a type="button" class="close" data-dismiss="modal" value="Get Notified Pop-up Closed"
@@ -829,7 +829,7 @@
 				<div class="modal-body">
 					<div class=row>
 						<div class="col-md-6">
-							<img src="images/Stick.png">
+							<img src="images/StickPadWhite.png">
 						</div>
 						<div class="col-md-6" style="display: grid; align-items: center;">
 
