no autoplay, doesn't work

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 									<div class="video-blk">
 										<div class="video-wrapper">
 											<video id="video" class="videoPlayer" controls controlsList="nodownload"
-												autoplay loop poster="images/RyuStill.jpg">
+												poster="images/RyuStill.jpg">
 												<source src="res/RoverFinal_720.mp4" type="video/mp4">
 											</video>
 										</div>
