--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 									<p class="text-center text-white">Creating a platform that could handle all the many
 										aspects of DeFi under one umbrella required that we build an exchange, money
 										market, yield aggregator, and more. We called this ambitious project our
-										Innovation Stack. Rover combines every facet of Defi & NFTs into a Unified and
+										Innovation Stack. Rover combines every facet of DeFi & NFTs into a Unified and
 										All-Inclusive ecosystem built to maximize user profit flow with the least
 										friction. Built on the very best financial tools in crypto, Rover’s Innovation
 										Stack is the most ambitious form of “Money Lego” architecture yet in DeFi.</p>
@@ -425,7 +425,7 @@
 
 											<div class="section-title wow fadeInUp">SWAP</div>
 											<p class="wow fadeInUp">Buys from our own RoverSwap, built on top Uniswap &
-												Pancake, with our additional Defi technology for partnerships and
+												Pancake, with our additional DeFi technology for partnerships and
 												innovation stack integration</p>
 
 
@@ -435,7 +435,7 @@
 
 
 											<div class="section-title wow fadeInUp">Stake</div>
-											<p class="wow fadeInUp">Earn a minimum of 1200% APY guaranteed by statking
+											<p class="wow fadeInUp">Earn a minimum of 1200% APY guaranteed by staking
 												the LP tokens for you</p>
 
 
@@ -573,7 +573,7 @@
 								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
 								<h2 class="wow fadeInUp">Governance</h2>
 								<h3 class="wow fadeInUp">Govern all the things</h3>
-								<p>ROVER is being created to uphold the principles of Defi. Holders of the ROVER token
+								<p>ROVER is being created to uphold the principles of DeFi. Holders of the ROVER token
 									thus become part of the decentralized governing organization RoverDao, which makes
 									decisions on behalf of the protocol. </p>
 
@@ -624,12 +624,12 @@
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>NFT</span></h1>
-								<h2 class="wow fadeInUp">Bridge Defi to NFT</h2>
-								<h3 class="wow fadeInUp">Trade NFT across marketplaces with <br> Full Defi benefits</h3>
+								<h2 class="wow fadeInUp">Bridge DeFi to NFT</h2>
+								<h3 class="wow fadeInUp">Trade NFT across marketplaces with <br> Full DeFi benefits</h3>
 								<p>The current explosion of NFTs in the marketplace has created the first real gateway
 									between mainstream everyday people and the heretofore esoteric and somewhat
 									self-enclosed world of decentralized finance. With this comes unprecedented
-									potential for growth in Defi, as capital floods into the space from new outside
+									potential for growth in DeFi, as capital floods into the space from new outside
 									sources. RoverNFT creates the bridge which allows users to bring their NFTs </p>
 
 
@@ -694,10 +694,10 @@
 									<li>Burn Unsold Tokens</li>
 								</ul>
 								<h2 class="wow fadeInUp">Utility</h2>
-								<p>ROVER Token has the combined utility & revenue of all the Defi & NFT platforms that
+								<p>ROVER Token has the combined utility & revenue of all the DeFi & NFT platforms that
 									Rover offers, from its own version and TLV in Uniswap/Pancake, Yearn, Aave,
 									Synthetix, Mirror, Maker, to its own upcoming L2 DEX, derivatives & games, as Rover
-									bridges Defi & NFTs</p>
+									bridges DeFi & NFTs</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -745,7 +745,7 @@
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>Liquidity Generation Event (LGE)</span></h1>
-								<p>25% of the 100M supple, or 25M tokens, will be sold, at maximum. <br>
+								<p>25% of the 100M suppley will be sold, at maximum. <br>
 								<p>25% goes to Liquidity Mining (LM) for the first 30 days</p>
 								<p> Unsold tokens will be burned.</p>
 								<p> Limited Supply. Only 1k BNB (~5 BTC worth) is available at the lowest price</p>
