--- a/index.html
+++ b/index.html
@@ -430,17 +430,17 @@
 
 
 											<div class="section-title wow fadeInUp">Pool</div>
-											<p class="wow fadeInUp">Fetch the Liquidity Provider (LP) tokens from our
+											<p class="wow fadeInUp">Fetches the Liquidity Provider (LP) tokens from our
 												Rover/BNB pool</p>
 
 
 											<div class="section-title wow fadeInUp">Stake</div>
-											<p class="wow fadeInUp">Earn a minimum of 1200% APY guaranteed by staking
+											<p class="wow fadeInUp">Earns a minimum of 1200% APY guaranteed by staking
 												the LP tokens for you</p>
 
 
 											<div class="section-title wow fadeInUp">Compound</div>
-											<p class="wow fadeInUp">Ensure optimal APY as Rover stakes your claimable
+											<p class="wow fadeInUp">Ensures optimal APY as Rover stakes your claimable
 												tokens to compounds APR</p>
 
 
@@ -495,7 +495,7 @@
 										revenue</p>
 									<h3 class="wow fadeInUp">Contributor</h3>
 									<p class="wow fadeInUp">50% of contributor earnings goes to Rover. The contributor
-										can have its own LD. Rover helps with operations</p>
+										can have its own LD</p>
 									<h3 class="wow fadeInUp">White-label</h3>
 									<p class="wow fadeInUp">Use our LD & get % for your contribution</p>
 
@@ -658,10 +658,10 @@
 							<div class="col-md-6 align-self-center text-left wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverChains</span></h1>
 								<h2 class="wow fadeInUp">Cross Chains</h2>
-								<h3 class="wow fadeInUp">L2 DEX & Der Games, Social NFTs</h3>
+								<h3 class="wow fadeInUp">L2 DEX, Games, Social NFTs</h3>
 								<ul class="wow fadeInUp text-left">
 									<li>Cross Chains</li>
-									<li>L2 DEX & Der Games</li>
+									<li>L2 DEX & Games</li>
 									<li>Social NFTs </li>
 								</ul>
 								<p> Integrated with RoverNFT, RoverChains on L2 provides a superior experience for users
@@ -722,9 +722,9 @@
 							</div>
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>Liquidity Mining</span></h1>
-								<p>1200%+ APY guaranteed minimum. Stakers can claim rewards at the end of the first
+								<p>1200%+ APY guaranteed minimum<br>Stakers can claim rewards at the end of the first
 									month</p>
-								<p>5x Time Bonus. Early LM miners earn up 400% extra over 30 days, relative to late
+								<p>5x Time Bonus<br>Early LM miners earn up 400% extra over 30 days, relative to late
 									stakers</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -745,7 +745,7 @@
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>Liquidity Generation Event (LGE)</span></h1>
-								<p>25% of the 100M suppley will be sold, at maximum. <br>
+								<p>25% of the 100M supply will be sold, at maximum. <br>
 								<p>25% goes to Liquidity Mining (LM) for the first 30 days</p>
 								<p> Unsold tokens will be burned.</p>
 								<p> Limited Supply. Only 1k BNB (~5 BTC worth) is available at the lowest price</p>
