fixed coin click allignment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Rover</title>
 	<meta name="title" content="Rover" />
 	<meta name="description" content="Rover" />
+	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
 	<meta name="keywords" content="Rover" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -120,6 +121,7 @@
 	</style>
 
 	<link type="text/css" rel="stylesheet" href="clock_assets/flipclock.css" />
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
 
 <body>
