--- a/index.html
+++ b/index.html
@@ -477,7 +477,6 @@
 
 
 				<section id="partner"
-					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 
 					<div class="content-banner-wrap content-banner-box-shadow py-0">
 						<canvas id="bgCanvas2"></canvas>
@@ -857,7 +856,7 @@
 		//wow-animation
 		new WOW().init();
 	</script>
-	<script src="js/shooting-stars.js" type="text/javascript"></script>
+		<!-- <script src="js/shooting-stars.js" type="text/javascript"></script> -->
 
 	<script type="text/javascript"></script>
 </body>
