--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 															play: 'play',
 															wrapper: 'flip-clock-small-wrapper'
 														};
-														var countdown = 1616432400 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
+														var countdown = 1617037200 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
 														countdown = Math.max(1, countdown);
 														$('.clock-builder-output').FlipClock(countdown, opts);
 													});
@@ -477,6 +477,7 @@
 
 
 				<section id="partner"
+					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 
 					<div class="content-banner-wrap content-banner-box-shadow py-0">
 						<canvas id="bgCanvas2"></canvas>
