--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 		rel="stylesheet">
 
-	<script>
+	<!-- <script>
 		$(document).ready(function ($) {
 			$('.home-wrap #content-wrapper').waypoint(function (direction) {
 				$("#navbar").toggleClass('sticky', direction == 'down');
@@ -52,7 +52,9 @@
 				offset: '-100px'
 			});
 		});
-	</script>
+	</script> -->
+
+	
 	<style>
 
 
@@ -243,7 +245,7 @@
 														color: #CCCCCC;
 													}
 												</style>
-												<script type="text/javascript">
+												<!-- <script type="text/javascript">
 													$(function () {
 														FlipClock.Lang.Custom = { days: 'Days', hours: 'Hours', minutes: 'Minutes', seconds: 'Seconds' };
 														var opts = {
@@ -265,7 +267,7 @@
 														countdown = Math.max(1, countdown);
 														$('.clock-builder-output').FlipClock(countdown, opts);
 													});
-												</script>
+												</script> -->
 												</div>
 												</div>
 												
@@ -622,7 +624,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="NFT" class="content-banner-wrap content-banner-box-shadow animate animate">
+				<section id="NFT" class="content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
@@ -650,7 +652,7 @@
 					</div>
 				</section>
 
-				<section id="RoverChains" class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate  animate">
+				<section id="RoverChains" class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
 						<div class="row row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
@@ -674,7 +676,7 @@
 					
 				</section>
 
-				<section id="Token" class="content-banner-wrap content-banner-box-shadow animate  animate">
+				<section id="Token" class="content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
@@ -707,7 +709,7 @@
 				</section>
 
 				<section id="LM"
-					class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate  animate">
+					class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
 						<div class="row row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
@@ -732,7 +734,7 @@
 				</section>
 
 
-				<section id="LGE" class="content-banner-wrap content-banner-box-shadow animate  animate"
+				<section id="LGE" class="content-banner-wrap content-banner-box-shadow animate"
 					style="background-color: #030303;">
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
@@ -808,7 +810,7 @@
 	</div>
 
 
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+	<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content" style="background-image: url('images/hexagon.jpg'); background-repeat: no-repeat;
@@ -848,16 +850,64 @@
 				</div>
 				<div class="modal-footer">
 					<!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Save changes</button> -->
+					<button type="button" class="btn btn-primary">Save changes</button> -->
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<div class="modal fade" tabindex="-1" role="dialog" id="exampleModal">
+		<div class="modal-dialog" role="document">
+		  <div class="modal-content" style="background-image: url('images/hexagon.jpg'); background-repeat: no-repeat;
+		  background-size: cover;">
+			<div class="modal-header">
+			  <h5 class="modal-title">Get Notified</h5>
+			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			<div class="modal-body">
+				<div class=row>
+					<div class="col-md-6">
+						<img src="images/StickPadWhite.png">
+					</div>
+					<div class="col-md-6" style="display: grid; align-items: center;">
+
+						<h3>Follow Us</h3>
+						<ul class="modal-ul">
+							<br>
+							<li class="modal-p"><a href="https://twitter.com/rovercapital?s=21" target="_blank"
+									value="Follow us Twitter">Twitter</a></li>
+							<br>
+							<li class="modal-p"><a href="https://t.me/rovercapital" target="_blank"
+									value="Follow us Telegram">Telegram
+									News</a> </li>
+							<br>
+							<li class="modal-p"><a href="https://t.me/roverchat" target="_blank"
+									value="Follow us Telegram Chat">Telegram Chat</a>
+							</li>
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+		<div class="modal-footer">
+			  <!-- <button type="button" class="btn btn-primary">Save changes</button>
+			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+			</div>
+		  </div>
+		</div>
+	  </div>
+
 	<script>
 		//wow-animation
 		new WOW().init();
 	</script>
-		<!-- <script src="js/shooting-stars.js" type="text/javascript"></script> -->
+			<!-- TODO: WHY: if we remove this, mobile popup behavior gets screwed -->
+			<script src="js/shooting-stars.js" type="text/javascript"></script>
 
 	<script type="text/javascript"></script>
 </body>
