--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href="images/rover_fevicon-min.png" sizes="192x192" rel="icon" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/fontawesome-all.min.css" rel="stylesheet">
-	<link href="css/purifycss2.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/mobile-chrome-vh-fix.js" type="text/javascript"></script>
