btn short value names for GA

--- a/index.html
+++ b/index.html
@@ -54,74 +54,6 @@
 		});
 	</script>
 
-	
-	<style>
-
-
-
-		.modal-p {
-			color: #042c56;
-			font-weight: 600;
-		}
-
-		.modal-ul {
-			list-style: none;
-			padding-left: 0px;
-		}
-
-		.animate-right,
-		.animate-left {
-			opacity: 0
-		}
-
-		.animate .animate-left {
-			-webkit-animation: left-in-animate 0.5s ease-out forwards;
-			animation: left-in-animate 0.5s ease-out forwards;
-		}
-
-		.animate .animate-right {
-			-webkit-animation: right-in-animate 0.8s ease-out forwards;
-			animation: right-in-animate 0.8s ease-out forwards;
-		}
-
-		/* canvas {
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: 100vh;
-			width: 100%;
-		} */
-
-		.font-lg {
-			font-size: 60px;
-		}
-
-		.font-lg2 {
-			font-size: 40px;
-		}
-
-		@media (max-width: 767px) {
-
-		
-			.font-lg {
-				font-size: 48px;
-			}
-
-			.font-lg2 {
-				font-size: 30px;
-				padding: 0 !important;
-			}
-
-			.bg-clouds img {
-				margin-bottom: 60px
-			}
-
-			.yellow_padding {
-				padding-left: 40px !important;
-			}
-		}
-	</style>
-
 	<link type="text/css" rel="stylesheet" href="clock_assets/flipclock.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
@@ -268,7 +200,7 @@
 													<div class="banner-header-button wow fadeInUp buttonresonsive">
 															<a class="button" href="javascript:void(0)" data-toggle="modal"
 																data-target="#exampleModal"
-																value="All DeFi & NFT Earnings Get Notified" download>Get
+																value="TopGN" download>Get
 																Notified!</a>
 													</div>
 												</div>
@@ -321,7 +253,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button stackbtn" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" value="Innovation Stack Get Notified" download>Get
+										data-target="#exampleModal" value="StackGN" download>Get
 										Notified!</a>
 								</div>
 
@@ -375,7 +307,7 @@
 									<div class="section-subtitle wow fadeInUp">Fetch!</div>
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
-											data-target="#exampleModal" download value="RoverHouse Get Notified">Get
+											data-target="#exampleModal" download value="RoverHouseGN">Get
 											Notified!</a>
 									</div>
 										<div class="section-title wow fadeInUp">One Click Easy</div>
@@ -494,7 +426,7 @@
 
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
-											value="Rover Swap Get Notified" data-target="#exampleModal" download>Get
+											value="RoverSwapGN" data-target="#exampleModal" download>Get
 											Notified!</a>
 									</div>
 
@@ -518,7 +450,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverHouse Get Notified">Get
+										data-target="#exampleModal" download value="RoverHouseGN">Get
 										Notified!</a>
 								</div>
 
@@ -550,7 +482,7 @@
 									commodities, NFTs and more.</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverGib Get Notified">Get
+										data-target="#exampleModal" download value="RoverGibGN">Get
 										Notified!</a>
 								</div>
 							</div>
@@ -572,7 +504,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverDao Get Notified">Get
+										data-target="#exampleModal" download value="RoverDaoGN">Get
 										Notified!</a>
 								</div>
 
@@ -604,7 +536,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverOne Get Notified">Get
+										data-target="#exampleModal" download value="RoverOneGN">Get
 										Notified!</a>
 								</div>
 
@@ -628,7 +560,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="NFT Get Notified">Get Notified!</a>
+										data-target="#exampleModal" download value="NFT_GN">Get Notified!</a>
 								</div>
 
 							</div>
@@ -684,7 +616,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="Token & Supply Get Notified">Get
+										data-target="#exampleModal" download value="TokenGN">Get
 										Notified!</a>
 								</div>
 
@@ -711,7 +643,7 @@
 									stakers</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="Liquidity Mining Get Notified">Get
+										data-target="#exampleModal" download value="LM_GN">Get
 										Notified!</a>
 								</div>
 
@@ -736,7 +668,7 @@
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
 										data-target="#exampleModal" download
-										value="Liquidity Generation Event (LGE) Get Notified">Get Notified!</a>
+										value="LGE_GN">Get Notified!</a>
 								</div>
 
 							</div>
