TgChat TgNews GA names

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="NFT_GN">Get Notified!</a>
+										data-target="#exampleModal" download value="NftGN">Get Notified!</a>
 								</div>
 
 							</div>
@@ -643,7 +643,7 @@
 									stakers</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="LM_GN">Get
+										data-target="#exampleModal" download value="LmGN">Get
 										Notified!</a>
 								</div>
 
@@ -754,11 +754,11 @@
 									value="Follow us Twitter">Twitter</a></li>
 							<br>
 							<li class="modal-p"><a href="https://t.me/rovercapital" target="_blank"
-									value="Follow us Telegram">Telegram
+									value="TgNews">Telegram
 									News</a> </li>
 							<br>
 							<li class="modal-p"><a href="https://t.me/roverchat" target="_blank"
-									value="Follow us Telegram Chat">Telegram Chat</a>
+									value="TgChat">Telegram Chat</a>
 							</li>
 						</ul>
 
