GnPu tracking and rm screen_view from GA

--- a/index.html
+++ b/index.html
@@ -731,6 +731,12 @@
 <!-- TOD: WHY does it want a div here to remove red mark? -->
 <div>
 	<div class="modal fade" tabindex="-1" role="dialog" id="exampleModal">
+		<script>
+			gtag('event', 'screen_view', {
+            'screen_name': "GnPu"
+        });
+
+		</script>
 		<div class="modal-dialog" role="document">
 		  <div class="modal-content" style="background-image: url('images/hexagon.jpg'); background-repeat: no-repeat;
 		  background-size: cover;">
