--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/fontawesome-all.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" />
+
+	<!-- <script>less = { env: 'development'};</script>
+	<script src="less.js"></script>
+	<script>less.watch();</script> -->
+
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/mobile-chrome-vh-fix.js" type="text/javascript"></script>
@@ -56,6 +61,7 @@
 
 	<link type="text/css" rel="stylesheet" href="clock_assets/flipclock.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+
 </head>
 
 <body>
@@ -78,19 +84,19 @@
 						<div class="nav-wrap">
 							<nav id="nav-main" class="nav-full">
 								<ul>
-									<li><a class="n-link-1" href="javascript:void(0)" value="Fetch">Fetch</a></li>
-									<li><a class="n-link-2" href="javascript:void(0)" value="Swap">Swap</a></li>
-									<li><a class="n-link-3" href="javascript:void(0)" value="House">House</a></li>
-									<li><a class="n-link-4" href="javascript:void(0)" value="Gib">Gib</a></li>
-									<li><a class="n-link-5" href="javascript:void(0)" value="Dao">Dao</a></li>
-									<li><a class="n-link-6" href="javascript:void(0)" value="One">One</a></li>
-									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
-									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
+									<li><a class="n-link-1" href="javascript:void(0)" value="FetchTb">Fetch</a></li>
+									<li><a class="n-link-2" href="javascript:void(0)" value="SwapTb">Swap</a></li>
+									<li><a class="n-link-3" href="javascript:void(0)" value="HouseTb">House</a></li>
+									<li><a class="n-link-4" href="javascript:void(0)" value="GibTb">Gib</a></li>
+									<li><a class="n-link-5" href="javascript:void(0)" value="DaoTb">Dao</a></li>
+									<li><a class="n-link-6" href="javascript:void(0)" value="OneTb">One</a></li>
+									<li><a class="n-link-7" href="javascript:void(0)" value="NftTb">NFT</a></li>
+									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)"
 											value="Token">Token</a></li>
-									<li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LM">LM</a>
+									<li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
 									</li>
-									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LGE">LGE</a>
+									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LgeTb">LGE</a>
 									</li>
 
 									<!-- <li><a class=" get-modified" href="javascript:void(0)"  data-toggle="modal" data-target="#exampleModal" download value="Navigation Bar Get Notified">Get Notified!</a> </li> -->
@@ -127,17 +133,17 @@
 					<div id="banner-main">
 						<div class="banner-text-wrap">
 							<div class="container d-block">
-								<div class="row vh-100  row-eq-height animate">
-									<div class="col-md-7 align-self-md-center align-self-end">
+								<div id="aboveVideo" class="row row-eq-height animate">
+									<div id="HalWSB" class="col-md-7 align-self-md-start align-self-start">
 										<img class="fadeInUp" src="images/newimg.png" alt="" />
 									</div>
-									<div class="col-md-5 align-self-md-center ">
-										<div class="banner-text-center">
+									<div id="topText" class="col-md-5 align-self-md-start">
+										<div class="banner-text-start">
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
 														<h1 class="text-white font-lg wow fadeInUp backInUp"
-															data-wow-duration="2s">All DeFi & <br>NFT Earnings</h1>
+															data-wow-duration="2s">All DeFi<br>& NFT Earnings</h1>
 
 														<h2 class="text-white font-lg2  wow fadeInUp for-leter-space"
 															data-wow-duration="2s">
@@ -149,7 +155,7 @@
 
 													</div>
 
-													<div class="newclasclock-builder-output">
+													<div id="clock" class="newclasclock-builder-output">
 														<div class="clock-builder-output">														
 															<script type="text/javascript"
 																src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -200,7 +206,7 @@
 													<div class="banner-header-button wow fadeInUp buttonresonsive">
 															<a class="button" href="javascript:void(0)" data-toggle="modal"
 																data-target="#exampleModal"
-																value="TopGN" download>Get
+																value="TopGn" download>Get
 																Notified!</a>
 													</div>
 												</div>
@@ -253,7 +259,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button stackbtn" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" value="StackGN" download>Get
+										data-target="#exampleModal" value="StackGn" download>Get
 										Notified!</a>
 								</div>
 
@@ -307,7 +313,7 @@
 									<div class="section-subtitle wow fadeInUp">Fetch!</div>
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
-											data-target="#exampleModal" download value="RoverHouseGN">Get
+											data-target="#exampleModal" download value="RoverHouseGn">Get
 											Notified!</a>
 									</div>
 										<div class="section-title wow fadeInUp">One Click Easy</div>
@@ -426,7 +432,7 @@
 
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
-											value="RoverSwapGN" data-target="#exampleModal" download>Get
+											value="RoverSwapGn" data-target="#exampleModal" download>Get
 											Notified!</a>
 									</div>
 
@@ -450,7 +456,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverHouseGN">Get
+										data-target="#exampleModal" download value="RoverHouseGn">Get
 										Notified!</a>
 								</div>
 
@@ -482,7 +488,7 @@
 									commodities, NFTs and more.</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverGibGN">Get
+										data-target="#exampleModal" download value="RoverGibGn">Get
 										Notified!</a>
 								</div>
 							</div>
@@ -504,7 +510,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverDaoGN">Get
+										data-target="#exampleModal" download value="RoverDaoGn">Get
 										Notified!</a>
 								</div>
 
@@ -536,7 +542,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverOneGN">Get
+										data-target="#exampleModal" download value="RoverOneGn">Get
 										Notified!</a>
 								</div>
 
@@ -560,7 +566,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="NftGN">Get Notified!</a>
+										data-target="#exampleModal" download value="NftGn">Get Notified!</a>
 								</div>
 
 							</div>
@@ -616,7 +622,7 @@
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="TokenGN">Get
+										data-target="#exampleModal" download value="TokenGn">Get
 										Notified!</a>
 								</div>
 
@@ -643,7 +649,7 @@
 									stakers</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="LmGN">Get
+										data-target="#exampleModal" download value="LmGn">Get
 										Notified!</a>
 								</div>
 
@@ -668,7 +674,7 @@
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
 										data-target="#exampleModal" download
-										value="LgeGN">Get Notified!</a>
+										value="LgeGn">Get Notified!</a>
 								</div>
 
 							</div>
