LS mode all text fits

--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 class="text-white font-lg wow fadeInUp backInUp"
+														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp"
 															data-wow-duration="2s">All DeFi<br>& NFT Earnings</h1>
 
-														<h2 class="text-white font-lg2  wow fadeInUp for-leter-space"
+														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space"
 															data-wow-duration="2s">
 															Uni<span class="Textfadehome fied">fied</span> in One
 															<span class="Textfadehome coinn">Coin</span>
 														</h2>
-														<h2 class="text-white font-lg2 wow fadeInUp">
+														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
 
 													</div>
