--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
 
 				<section id="partner"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
-
-					<!-- <div class="content-banner-wrap content-banner-box-shadow py-0"> -->
+					<div class="container">
+						<!-- <div id="bgCanvas2" class="content-banner-wrap content-banner-box-shadow py-0"> -->
 						<!-- <canvas id="bgCanvas2"></canvas> -->
-						<div class="container">
+						<!-- <div class="container"> -->
 							<div class="row vh-100 row-eq-height">
 								<div class="col-md-6 align-self-center text-center ">
 									<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
