LGE text not 30 days

--- a/index.html
+++ b/index.html
@@ -645,8 +645,7 @@
 								<h1 class="wow fadeInUp"><span>Liquidity Mining</span></h1>
 								<p>1200%+ APY guaranteed minimum<br>Stakers can claim rewards at the end of the first
 									month</p>
-								<p>5x Time Bonus<br>Early LM miners earn up 400% extra over 30 days, relative to late
-									stakers</p>
+								<p>5x Time Bonus<br>Early LM miners earn up 400% extra relative to late miners</p>
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
 										data-target="#exampleModal" download value="LmGn">Get
@@ -665,11 +664,12 @@
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>Liquidity Generation Event (LGE)</span></h1>
-								<p>25% of the 100M supply will be sold, at maximum. <br>
-								<p>25% goes to Liquidity Mining (LM) for the first 30 days</p>
-								<p> Unsold tokens will be burned.</p>
-								<p> Limited Supply. Only 1k BNB (~5 BTC worth) is available at the lowest price</p>
+								<h1 class="wow fadeInUp"><span>Liquidity Generation Event</span></h1>
+								<p>25% of the 100M supply will be sold, at most<br>
+								<p>25% goes to Liquidity Mining (LM)</p>
+								<p>50% goes to DAO for it to use by vote</p>
+								<p> Unsold tokens will be burned</p>
+								<p> Limited Supply. Less than 1k BNB (< 5 BTC worth) will be available at the lowest price</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
